# matrixAI

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
benchmarks/: audit_cost.py  results_audit_cost.json  results_serving.json  results_training.json  serving.py  training.py
examples/: celsius_to_kelvin.mxai  celsius_to_kelvin.mxtrain  celsius_to_kelvin.train.csv  claim-risk.prompt.txt  continuous-scoring-sample.json  continuous-scoring.typed.mxai  email-agent.evaluation_report.json  email-agent.mxai  email-agent.prompt.txt  email-agent.semantic  email-agent.supervised.mxtrain  email-agent.test.csv  email-agent.train.csv  email-agent.typed.mxai  email-notifier.mxact  email-notifier.mxai  email-sample.json  fall-risk-sample.json  fall-risk.dataset-manifest.json  fall-risk.evaluation_report.json  fall-risk.mxai  fall-risk.probability.mxtrain  fall-risk.probability.test.csv  fall-risk.probability.train.csv  fall-risk.semantic  fall-risk.supervised.mxtrain  fall-risk.test.csv  fall-risk.train.csv  fall-risk.typed.mxai  p1_demo.mx  pharmacy-dispense-low.json  pharmacy-dispense-sample.json  pharmacy-dispense.mxai  pharmacy-dispense.semantic  pharmacy-dispense.typed.mxai  rules-sample.txt  text-routing-pipeline.mxai  transformer-classifier-sample.json  transformer-classifier-vector.mxai  transformer-classifier-vector.mxtrain  (+4 more)
matrixai/: __init__.py  __main__.py  cli.py  errors.py  limits.py  pack.py  playground.py  playground_api.py  (+6 more)
(+503 files in other folders)
